--- a/VRChat/39/1229039.html
+++ b/VRChat/39/1229039.html
@@ -78,9 +78,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "1lDaJ4IIzG5Ywo8hRFPB+rloGmbTI6N1OL62lV71CTM="></script>
+    "3s/ZyWl7HmQVxZsvbJyLXniwHTPNoQ/wYf13jcaCmac="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC推奨_斧","description":"テストも兼ねて初投稿になります。\n再配布以外、特に制限もないのでご自由にお使いください。\n","url":"https://booth.pm/ja/items/1229039","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1229039/fbb358d3-6980-4e2e-a43e-c321faa64902_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1lDaJ4IIzG5Ywo8hRFPB+rloGmbTI6N1OL62lV71CTM="></script>
+    nonce="3s/ZyWl7HmQVxZsvbJyLXniwHTPNoQ/wYf13jcaCmac="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -512,7 +512,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
